--- a/style.css
+++ b/style.css
@@ -66,10 +66,10 @@
     font-size: 36px;
     cursor: pointer;
 }
-.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover, .fa-github:hover{
+.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover, .fa-github:hover, .fa-envelope:hover{
     color: #008000;
 }
-.fab {
+.fab, .fas {
     color: #000000;
 }
 /* footer styling */
