--- a/style.css
+++ b/style.css
@@ -83,41 +83,60 @@
 }
 
 .toggledark {
+    color: white;
+    padding-bottom: 15px;
+    padding-left: 60px;
+}
 
-      align-self: center;
-      background-color: #fff;
-      background-image: none;
-      background-position: 0 90%;
-      background-repeat: repeat no-repeat;
-      background-size: 4px 3px;
-      border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
-      border-style: solid;
-      border-width: 2px;
-      box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
-      box-sizing: border-box;
-      color: #41403e;
-      cursor: pointer;
-      display: inline-block;
-      font-family: Neucha, sans-serif;
-      font-size: 1rem;
-      line-height: 23px;
-      outline: none;
-      padding: .75rem;
-      text-decoration: none;
-      transition: all 235ms ease-in-out;
-      border-bottom-left-radius: 15px 255px;
-      border-bottom-right-radius: 225px 15px;
-      border-top-left-radius: 255px 15px;
-      border-top-right-radius: 15px 225px;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-}   
-    .toggledark:hover {
-      box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
-      transform: translate3d(0, 2px, 0);
-    }
-    
-    .toggledark:focus {
-      box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
-    }
+    .switch input
+{
+  display: none;
+}
+
+.switch 
+{
+  display: inline-block;
+  width: 60px; /*=w*/
+  height: 30px; /*=h*/
+  margin: 4px;
+  transform: translateY(50%);
+  position: relative;
+}
+
+.slider
+{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 30px;
+  box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+  cursor: pointer;
+  border: 4px solid transparent;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.slider:before
+{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #777;
+  border-radius: 30px;
+  transform: translateX(-30px); /*translateX(-(w-h))*/
+  transition: 0.2s;
+}
+
+input:checked + .slider:before
+{
+  transform: translateX(30px); /*translateX(w-h)*/
+  background-color: limeGreen;
+}
+
+input:checked + .slider
+{
+  box-shadow: 0 0 0 2px limeGreen, 0 0 8px limeGreen;
+}
